BUG: 295235

Fix crash on opening SQLite database.
(cherry picked from commit 6af4b33df2476f568db852d96b99eb45eaa2e21f)