kmymoney/mymoney/storage/mymoneystoragesql.cpp
@@ -3348,8 +3348,6 @@ const QMap<QString, MyMoneySchedule> MyMoneyStorageSql::fetchSchedules(const QSt
   if (forUpdate)
     queryString += m_driver->forUpdateString();
 
-  queryString += ';';
-
   q.prepare(queryString);
 
   if (! idList.empty()) {
